# ocaml-atproto-lexicon

./: README.md  atproto-lexicon.opam  dune-project
src/lexicon/: atproto_lexicon.ml  dune
src/ppx/: atproto_lexicon_ppx.ml  dune  lex_to_ocaml.ml
test/: dune  examples.ml  test_atproto_lexicon.ml
